--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script   src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/typography.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>StarWars RPG</title>
 </head>
 <body>
     
+<div id="wrap" class="clearfix">
 
+ 
+
+<div id="charBank" class="clearfix"></div>
+
+<div id="charPick"></div>
+
+<div id="attacker"></div>
+
+<div id="defend"></div>
+</div>
 
     <script type="text/javascript">
         $(document).ready(function () {
